--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>emerald-header-recreation</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Echo Cheats</title>
+    <meta name="description" content="Cheats" />
+    <meta name="author" content="Cheats" />
 
-    <meta property="og:title" content="emerald-header-recreation" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:title" content="Echo Cheats" />
+    <meta property="og:description" content="An undetected + trusted game enhancement supplier!" />
+    <meta property="og:type" content="cheats" />
+    <meta property="og:image" content="https://cdn.discordapp.com/banners/1367051530607267860/0499e1ba23cc3983e87c024ecc24f70f.jpg?size=2048" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="An undetected + trusted game enhancement supplier!" />
+    <meta name="twitter:site" content="Echo Cheats" />
+    <meta name="twitter:image" content="https://cdn.discordapp.com/banners/1367051530607267860/0499e1ba23cc3983e87c024ecc24f70f.jpg?size=2048" />
   </head>
 
   <body>
